vlib/v/checker/tests/match_ranges_not_same_cast_err.out
vlib/v/checker/tests/match_ranges_not_same_cast_err.vv:7:2: error: the low and high parts of a range expression, should have matching types
    5 | c := u16(3)
    6 | match c {
    7 |     a...b { println('1...5') }
      |     ~~~~~
    8 |     else { println('not 1...5') }
    9 | }
Details: 
 low part type: u16
high part type: u8
